--- a/bootstrap-pages/css/style.css
+++ b/bootstrap-pages/css/style.css
@@ -1,3 +1,22 @@
+
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap'); */
+/* body{
+    font-family: 'Roboto', sans-serif;
+} */
+@font-face {
+    font-family:'Roboto-Black';
+    src: url('./fonts/Roboto-Black.ttf');
+}
+body{
+    font-family:'Roboto-Bold', sans-serif;
+}
+@font-face {
+    font-family:'Roboto-Italic';
+    src: url('./fonts/Roboto-Italic.ttf');
+}
+.fw-500{
+    font-weight:500;
+}
 .color1{
     color:#107DB8 !important;
 }
